<resources>
    <string name="app_name">mobile</string>
    <string name="sign_in">Sign In</string>
    <string name="lbl_username">username</string>
    <string name="lbl_password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_username">enter your username</string>
    <string name="submit">Submit</string>
    <string name="re_enter_your_password">re-enter your password</string>
    <string name="email_or_tel">Email or Tel</string>
    <string name="log_out">Log out</string>
    <string name="string_log_out">Log out</string>
    <string name="email_password_or_username">Your email, password, or username</string>
    <string name="next">Next</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="re_enter_your_new_password">Re-enter your new password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="search">Search</string>
    <string name="user_profile">User profile</string>
    <string name="search_hint">Search for items, shops</string>
    <string name="item_image">Item image</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="welcome_text">Here are some suggestions for you</string>
    <string name="price">Price</string>
    <string name="available">Available</string>
    <string name="hinh_thuc_van_chuyen">Hinh thuc van chuyen</string>
    <string name="san_pham_1">San pham 1</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="x_cai">x cai</string>
    <string name="thanh_toan">Thanh toan</string>
    <string name="san_pham_2">San pham 2</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="x_cai">x cai</string>
    <string name="san_pham_3">San pham 3</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="x_cai">x cai</string>
    <string name="tat_ca">Tat ca</string>
    <string name="tong_thanh_toan_xxx_xxx_vnd">Tong thanh toan: xxx.xxx VND</string>
    <string name="xx_xxx_vnd">+xx.xxx VND</string>
    <string name="hinh_thuc_thanh_toan">Hinh thuc thanh toan</string>
    <string name="san_pham_1">San pham 1</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="x_cai">x cai</string>
    <string name="gio_hang">Gio hang</string>
    <string name="san_pham_2">San pham 2</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="x_cai">x cai</string>
    <string name="san_pham_3">San pham 3</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="xxx_xxx_vnd">xxx.xxx VND</string>
    <string name="x_cai">x cai</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="tat_ca">Tat ca</string>
    <string name="tong_thanh_toan_xxx_xxx_vnd">Tong thanh toan: xxx.xxx VND</string>
    <string name="thanh_cong">Thanh cong</string>
    <string name="xem_thong_tin_don_hang">Xem thong tin don hang</string>
    <string name="ve_trang_chu">Ve trang chu</string>
    <string name="tai_khoan">Tai khoan</string>
    <string name="nguyen_van_a">Nguyen Van A</string>
    <string name="nva_gmail_com">nva@gmail.com</string>
    <string name="dang_xuat">Dang xuat</string>
    <string name="sua_thong_tin">Sua thong tin</string>
</resources>