<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserActivity.verifyuser.RegisterActivity">

    <TextView
        android:id="@+id/lbl_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/lbl_Success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/lbl_username"
        app:layout_constraintStart_toStartOf="@+id/lbl_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/lbl_sign_up" />

    <TextView
        android:id="@+id/lbl_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/lbl_password"
        app:layout_constraintStart_toStartOf="@+id/lbl_Success"
        app:layout_constraintTop_toTopOf="@+id/lbl_Success" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/lbl_password"
        app:layout_constraintStart_toStartOf="@+id/lbl_cart"
        app:layout_constraintTop_toTopOf="@+id/lbl_cart" />

    <EditText
        android:id="@+id/edt_username_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_Success"
        app:layout_constraintStart_toStartOf="@+id/lbl_Success"
        app:layout_constraintTop_toTopOf="@+id/lbl_Success"
        app:layout_constraintVertical_bias="0.517" />

    <EditText
        android:id="@+id/edt_email_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:hint="@string/email_or_tel"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.551" />

    <EditText
        android:id="@+id/edt_password_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_cart"
        app:layout_constraintStart_toStartOf="@+id/lbl_cart"
        app:layout_constraintTop_toTopOf="@+id/lbl_cart" />

    <EditText
        android:id="@+id/edt_passrepeat_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:hint="@string/re_enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_password"
        app:layout_constraintStart_toStartOf="@+id/lbl_password"
        app:layout_constraintTop_toTopOf="@+id/lbl_password"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/edt_passrepeat_signup"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/lbl_password"
        app:layout_constraintTop_toTopOf="@+id/edt_passrepeat_signup" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/email_or_tel"
        app:layout_constraintStart_toStartOf="@+id/lbl_Success"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Success" />

    <Button
        android:id="@+id/btn_signin_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/btn_submit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_submit"
        app:layout_constraintTop_toTopOf="@+id/btn_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>